# near-data-api

./: .env  Cargo.toml  README.md
sql/: all_active_fungible_tokens.sql  all_assets__fungible_tokens.sql  clear_assets__fungible_tokens_transaction_data.sql  fungible_tokens_schema.sql  get_assets__fungible_tokens.sql  get_assets__fungible_tokens_burn_amount.sql  get_assets__fungible_tokens_by_id.sql  get_assets__fungible_tokens_transaction_data.sql  get_holder_count__assets_fungible_tokens.sql  insert_assets__fungible_tokens.sql  rank.sql  update_assets__fungible_tokens.sql  update_assets__fungible_tokens_burn_amount.sql  update_assets__fungible_tokens_holder_count.sql  update_assets__fungible_tokens_transaction_data.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  rpc.rs  tasks.rs
